# Podcast-Reels-Forge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PEDOBRAZ_REELS_INTEGRATION_PLAN.md  README.en.md  README.md  SECURITY.md  burn_drawtext_subs.py  burn_subs_pillow.py  config.yaml  console.txt  mypy.ini  pyproject.toml  render_viral_subs.py  requirements-dev.txt  requirements.txt  rerender_videos.py  start_forge.py  systeminfo.txt  test_models.py  test_models_v2.py  transcribe_input_audio.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
assets/subtitles/: forge_subtitles.css  style-editor.html
docs/: CONFIGURATION.md  DEVELOPMENT.md  PROMPTS.md  README.md  USER_GUIDE.md
gui/: analyze.html  cut.html  index.html  logs.html  pipeline-gui.html  settings.html  subtitles.html  transcribe.html
gui/assets/: app.css  app.js  editor.css  editor.js
podcast_reels_forge/: __init__.py  cli.py  config.py  pipeline.py
podcast_reels_forge/analysis/: __init__.py  audio_features.py  candidate_extraction.py  chunking.py  contracts.py  metadata.py  ranking.py  scoring.py  serializers.py  speaker_turns.py  term_check.py  transcript_index.py  validation.py
podcast_reels_forge/llm/: providers.py  schemas.py
tests/: __init__.py  test_analysis_chunking.py  test_analysis_prompts.py  test_analysis_ranking.py  test_analysis_scoring.py  test_analysis_validation.py  test_analyze.py  test_analyze_staged.py  test_article_stage.py  test_audio_features.py  test_burned_subtitles.py  test_diarize.py  test_evaluate_prompts.py  test_ffmpeg_utils.py  test_json_utils.py  test_logging_utils.py  test_pipeline.py  test_proofread_stage.py  test_providers.py  test_quota_scaling.py  test_reel_markdown.py  test_speaker_turns.py  test_term_check.py  test_transcribe_stage.py  test_video_processor.py  test_video_processor_exports.py
(+54 files in other folders)
